Fixed the hamburger menu spacing for the new sidebar width. Added the top urls back in

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,2 +1,3 @@
 // Variable overrides
 $sidebar-width: 250px;
+$navbar-brand-width: 200px;
